--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -35,7 +35,8 @@ For example, [systemitem]``Exclude patches by date``.
 
 . Click btn:[Attach/Detach Filters] link to see all available filters
 
-. Select the new **Exclude patches by date** filter then click on btn:[Save].
+. Select the new [guimenu]``Exclude patches by date`` filter.
+. Click btn:[Save].
 
 
 [#apply-filter-to-env]
