--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -42,7 +42,7 @@ For example, [systemitem]``Exclude patches by date``.
 [#apply-filter-to-env]
 === Apply the Filter to the Environment
 
-The Filter is now added to your filter list, but has not been applied to the project.
+The new filter is added to your filter list, but it still needs to be applied to the project.
 To apply the filter you need to build the first environment.
 
 .Procedure: Using the Filter
