--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -46,7 +46,7 @@ The new filter is added to your filter list, but it still needs to be applied to
 To apply the filter you need to build the first environment.
 
 .Procedure: Using the Filter
-Click on the btn:[Build] button to initiate the build process.
+Click btn:[Build] to build the first environment.
 
 . OPTIONAL: Add a _Message_ for tracking the build history.
 
