--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -48,7 +48,8 @@ To apply the filter you need to build the first environment.
 .Procedure: Using the Filter
 Click btn:[Build] to build the first environment.
 
-. OPTIONAL: Add a _Message_ for tracking the build history.
+. OPTIONAL: Add a message.
+You can use messages to help track the build history.
 
 . Check that the filter has worked correctly by using the new channels on a test server.
 If the tests complete successfully, promote the content to the next environment with the btn:[Promote] button.
