--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -52,7 +52,7 @@ Click btn:[Build] to build the first environment.
 You can use messages to help track the build history.
 
 . Check that the filter has worked correctly by using the new channels on a test server.
-If the tests complete successfully, promote the content to the next environment with the btn:[Promote] button.
+. Click btn:[Promote] to move the content to the next environment.
 
 The build will take longer if you have a large number of filters, or they are very complex.
 
