--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -56,7 +56,7 @@ You can use messages to help track the build history.
 
 The build will take longer if you have a large number of filters, or they are very complex.
 
-[TIP]
+[NOTE]
 ====
 Promotion creates a 1:1 copy of the metadata contained in the current environment to the next one. Filters determine which metadata will be used to define your channels and their content(packages).
 ====
