--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -58,7 +58,8 @@ The build will take longer if you have a large number of filters, or they are ve
 
 [NOTE]
 ====
-Promotion creates a 1:1 copy of the metadata contained in the current environment to the next one. Filters determine which metadata will be used to define your channels and their content(packages).
+When you promote content from one environment to the next, a copy of the metadata is created.
+Filters determine which metadata will be used to define your channels, as well the packages within those channels.
 ====
 
 [#exclude-a-patch]
