--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -69,7 +69,7 @@ Initial tests can help you discover issues.
 When such issues are found you must exclude the problem patch which was released before __August 1st, 2019 00:00am__.
 For example our problem patch was given the name of: *SUSE-15-2019-1807*.
 
-.Procedure: Exclude a Patch
+.Procedure: Excluding a Patch
 . Go to menu:Main Menu[Content Lifecycle > Filters] and click on btn:[Create Filter].
 
 . Enter a **Filter Name** for example __Exclude openjdk patch__ and from the **Filter Type** dropdown select **Patch (matches Advisory Name)**.
