--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -68,7 +68,6 @@ You can use messages to help track the build history.
 . Check that the filter has worked correctly by using the new channels on a test server.
 
 . Click btn:[Promote] to move the content to the next environment.
-
 The build will take longer if you have a large number of filters, or they are very complex.
 
 [NOTE]
@@ -82,10 +81,8 @@ Filters determine which metadata will be used to define your channels, as well t
 [#exclude-a-patch]
 === Excluding a Patch from the Project
 
-Initial tests can help you discover issues.
-When such issues are found you must exclude the problem patch which was released before __August 1st, 2019 00:00am__.
-For example our problem patch was given the name of: *SUSE-15-2019-1807*.
-
+Tests may help you discover issues.
+Once an issue is found, exclude the problem patch released before the **by date** filter.
 
 .Procedure: Excluding a Patch
 
