--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -86,7 +86,7 @@ Once an issue is found, exclude the problem patch released before the **by date*
 
 .Procedure: Excluding a Patch
 
-. Go to menu:Main Menu[Content Lifecycle > Filters] and click on btn:[Create Filter].
+. In the {productname} {webui}, navigate to menu:Content Lifecycle[Filters] and click btn:[Create Filter].
 
 . Enter a **Filter Name** for example __Exclude openjdk patch__ and from the **Filter Type** dropdown select **Patch (matches Advisory Name)**.
 
