--- a/modules/administration/pages/custom-ssl.adoc
+++ b/modules/administration/pages/custom-ssl.adoc
@@ -66,7 +66,7 @@ After you have completed the initial setup, you can replace the default certific
 ----
 configure-proxy.sh
 ----
-. At the ``Do you want to import existing certificates?`` prompt, type kbd:[y]
+. At the ``Do you want to import existing certificates?`` prompt, type kbd:[y].
 . Follow the prompts to complete setup.
 
 
