Replaceable elements use <> instead of ``

--- a/modules/administration/pages/custom-ssl.adoc
+++ b/modules/administration/pages/custom-ssl.adoc
@@ -33,9 +33,9 @@ After you have completed the initial setup, you can replace the default certific
 . At the command prompt, point the SSL environment variables to the custom certificate file locations:
 +
 ----
-export CA_CERT=`path_to_CA_certificate_file`
-export SERVER_KEY=`path_to_web_server_key`
-export SERVER_CERT=`path_to_web_server_certificate`
+export CA_CERT=<path_to_CA_certificate_file>
+export SERVER_KEY=<path_to_web_server_key>
+export SERVER_CERT=<path_to_web_server_certificate>
 ----
 . Complete {productname} setup:
 +
