--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -88,7 +88,9 @@ Once an issue is found, exclude the problem patch released before the **by date*
 
 . In the {productname} {webui}, navigate to menu:Content Lifecycle[Filters] and click btn:[Create Filter].
 
-. Enter a **Filter Name** for example __Exclude openjdk patch__ and from the **Filter Type** dropdown select **Patch (matches Advisory Name)**.
+. In the [guimenu]``Filter Name`` field, enter a name for the filter.
+For example, [systemitem]``Exclude openjdk patch``.
+. In the [guimenu]``Filter Type`` field, select [guimenu]``Patch (matches Advisory Name)``.
 
 . Enter **SUSE-15-2019-1807** as __Advisory Name__ and click on btn:[Save].
 
