--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -92,7 +92,9 @@ Once an issue is found, exclude the problem patch released before the **by date*
 For example, [systemitem]``Exclude openjdk patch``.
 . In the [guimenu]``Filter Type`` field, select [guimenu]``Patch (matches Advisory Name)``.
 
-. Enter **SUSE-15-2019-1807** as __Advisory Name__ and click on btn:[Save].
+. In the [guimenu]``Advisory Name`` field, type a name for the advisory.
+For example, [systemitem]``SUSE-15-2019-1807``
+. Click btn:[Save].
 
 . Go to menu:Main Menu[Content Lifecycle > Projects] and select your Project from the list.
 
