--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -96,7 +96,7 @@ For example, [systemitem]``Exclude openjdk patch``.
 For example, [systemitem]``SUSE-15-2019-1807``
 . Click btn:[Save].
 
-. Go to menu:Main Menu[Content Lifecycle > Projects] and select your Project from the list.
+. Navigate to menu:Content Lifecycle[Projects] and select your project.
 
 . Click on btn:[Attach/Detach Filters] link, select also **Exclude openjdk patch: ...**
 from list and click on btn:[Save].
