--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -100,7 +100,7 @@ For example, [systemitem]``SUSE-15-2019-1807``
 
 . Click btn:[Attach/Detach Filters] link, select [guimenu]``Exclude openjdk patch``, and click btn:[Save].
 
-Rebuilding a previous environment with the btn:[Build] button includes the new exclude filter with the former **by date** filter.
+When you rebuild a previous environment with the btn:[Build] button, the new exclude filter uses the previous [guimenu]``by date`` filter.
 
 
 
