--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -107,7 +107,7 @@ When you rebuild a previous environment with the btn:[Build] button, the new exc
 [#include-a-patch]
 === Including a Patch in the Project
 
-You receive a call from your Security Team.
+In this example, you have received a security alert.
 They inform you that an important security patch was released several days after __August 1st__.
 The name of the new patch is **SUSE-15-2019-2071**. You need to include this new patch into your next patch cycle.
 
