--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -108,7 +108,7 @@ When you rebuild a previous environment with the btn:[Build] button, the new exc
 === Including a Patch in the Project
 
 In this example, you have received a security alert.
-They inform you that an important security patch was released several days after __August 1st__.
+An important security patch was released several days after your last release on 1 August.
 The name of the new patch is **SUSE-15-2019-2071**. You need to include this new patch into your next patch cycle.
 
 [IMPORTANT]
