--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -109,7 +109,8 @@ When you rebuild a previous environment with the btn:[Build] button, the new exc
 
 In this example, you have received a security alert.
 An important security patch was released several days after your last release on 1 August.
-The name of the new patch is **SUSE-15-2019-2071**. You need to include this new patch into your next patch cycle.
+The name of the new patch is ``SUSE-15-2019-2071``. 
+You need to include this new patch into your next patch cycle.
 
 [IMPORTANT]
 ====
