--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -114,7 +114,7 @@ You need to include this new patch into your next patch cycle.
 
 [IMPORTANT]
 ====
-Use the btn:[Allow] Filters rule to select patches from a full source and add them to a previous environment.
+Use the [guimenu]``Allow`` filters rule to select patches from a full source and add them to a previous environment.
 The btn:[Allow] filters rule overrides the exclude function of the btn:[Deny] filter rule.
 ====
 
