--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -119,7 +119,7 @@ The [guimenu]``Allow`` filters rule overrides the exclude function of the [guime
 ====
 
 .Procedure: Including a Patch in a Project
-. Go to menu:Main Menu:[Content Lifecycle > Filters] and click on btn:[Create Filter].
+. In the {productname} {webui}, navigate to menu:Content Lifecycle[Filters] and click btn:[Create Filter].
 
 . Enter a __Filter Name__ such as **Include kernel security fix**.
 
