--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -121,7 +121,8 @@ The [guimenu]``Allow`` filters rule overrides the exclude function of the [guime
 .Procedure: Including a Patch in a Project
 . In the {productname} {webui}, navigate to menu:Content Lifecycle[Filters] and click btn:[Create Filter].
 
-. Enter a __Filter Name__ such as **Include kernel security fix**.
+. In the [guimenu]``Filter Name`` field, type a name for the filter.
+For example, [systemitem]``Include kernel security fix``.
 
 . Select **Patch (Advisory Name)** as the __Filter Type__.
 
