--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -124,7 +124,7 @@ The [guimenu]``Allow`` filters rule overrides the exclude function of the [guime
 . In the [guimenu]``Filter Name`` field, type a name for the filter.
 For example, [systemitem]``Include kernel security fix``.
 
-. Select **Patch (Advisory Name)** as the __Filter Type__.
+. In the [guimenu]``Filter Type`` field, select [guimenu]``Patch (Advisory Name)``.
 
 . Select *equals* or *matches* as the __Matcher__.
 
