--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -126,7 +126,7 @@ For example, [systemitem]``Include kernel security fix``.
 
 . In the [guimenu]``Filter Type`` field, select [guimenu]``Patch (Advisory Name)``.
 
-. Select *equals* or *matches* as the __Matcher__.
+. In the [guimenu]``Matcher`` field, select either [guimenu]``equals`` or [guimenu]``matches``.
 
 . Enter **SUSE-15-2019-2071** as Advisory name, click on the btn:[Allow] radio button.
 
