--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -128,7 +128,7 @@ For example, [systemitem]``Include kernel security fix``.
 
 . In the [guimenu]``Matcher`` field, select either [guimenu]``equals`` or [guimenu]``matches``.
 
-. Enter **SUSE-15-2019-2071** as Advisory name, click on the btn:[Allow] radio button.
+. In the [guimenu]``Advisory Name`` field, type [guimenu]``SUSE-15-2019-2071``, and check [guimenu]``Allow``.
 
 . Click btn:[Save] to store the Filter.
 
