--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -130,7 +130,7 @@ For example, [systemitem]``Include kernel security fix``.
 
 . In the [guimenu]``Advisory Name`` field, type [guimenu]``SUSE-15-2019-2071``, and check [guimenu]``Allow``.
 
-. Click btn:[Save] to store the Filter.
+. Click btn:[Save] to store the filter.
 
 . Go to menu:Main Menu[Content Lifecycle > Projects] and select your Project from the list.
 
