--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -132,7 +132,7 @@ For example, [systemitem]``Include kernel security fix``.
 
 . Click btn:[Save] to store the filter.
 
-. Go to menu:Main Menu[Content Lifecycle > Projects] and select your Project from the list.
+. Navigate to menu:Content Lifecycle[Projects] and select your project from the list.
 
 . Click on btn:[Attach/Detach Filters] link then select also **Include kernel security patch: ...** from the dropdown list.
 
