--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -134,7 +134,7 @@ For example, [systemitem]``Include kernel security fix``.
 
 . Navigate to menu:Content Lifecycle[Projects] and select your project from the list.
 
-. Click on btn:[Attach/Detach Filters] link then select also **Include kernel security patch: ...** from the dropdown list.
+. Click btn:[Attach/Detach Filters], and select [guimenu]``Include kernel security patch``.
 
 . Click on btn:[Save].
 
