--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -136,7 +136,7 @@ For example, [systemitem]``Include kernel security fix``.
 
 . Click btn:[Attach/Detach Filters], and select [guimenu]``Include kernel security patch``.
 
-. Click on btn:[Save].
+. Click btn:[Save].
 
 . Rebuild the environment by clicking the btn:[Build] button.
 The required patch is now included in your patch cycle.
