--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -138,7 +138,7 @@ For example, [systemitem]``Include kernel security fix``.
 
 . Click btn:[Save].
 
-. Rebuild the environment by clicking the btn:[Build] button.
+. Click btn:[Build] to rebuild the environment.
 The required patch is now included in your patch cycle.
 
 
