--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -145,7 +145,7 @@ For example, [systemitem]``Include kernel security fix``.
 [#update-a-patch-cycle]
 == Update an Existing Monthly Patch Cycle
 
-When a monthly patch cycle is over you can update the patch cycle for the new month.
+When a monthly patch cycle is complete, you can update the patch cycle for the next month.
 
 .Procedure: Update a Monthly Patch Cycle
 . Change the date of the **by date** filter to __September 1st__.
