--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -147,7 +147,7 @@ For example, [systemitem]``Include kernel security fix``.
 
 When a monthly patch cycle is complete, you can update the patch cycle for the next month.
 
-.Procedure: Update a Monthly Patch Cycle
+.Procedure: Updating a Monthly Patch Cycle
 . Change the date of the **by date** filter to __September 1st__.
 Alternatively, create a new filter and change the assignment to the project.
 
