--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -148,7 +148,7 @@ For example, [systemitem]``Include kernel security fix``.
 When a monthly patch cycle is complete, you can update the patch cycle for the next month.
 
 .Procedure: Updating a Monthly Patch Cycle
-. Change the date of the **by date** filter to __September 1st__.
+. In the [guimenu]``by date`` field, change the date of the filter to the next month.
 Alternatively, create a new filter and change the assignment to the project.
 
 . Check if the exclude filter for **SUSE-15-2019-1807** can be detached from the project.
