--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -151,7 +151,7 @@ When a monthly patch cycle is complete, you can update the patch cycle for the n
 . In the [guimenu]``by date`` field, change the date of the filter to the next month.
 Alternatively, create a new filter and change the assignment to the project.
 
-. Check if the exclude filter for **SUSE-15-2019-1807** can be detached from the project.
+. Check if the exclude filter for ``SUSE-15-2019-1807`` can be detached from the project.
 There may be a new patch available for fixing this issue.
 
 . Detach the **include** filter. The filter is included by default.
