--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -154,7 +154,8 @@ Alternatively, create a new filter and change the assignment to the project.
 . Check if the exclude filter for ``SUSE-15-2019-1807`` can be detached from the project.
 There may be a new patch available to fix this issue.
 
-. Detach the **include** filter. The filter is included by default.
+. Detach the ``include`` filter. 
+The filter is included by default.
 
 . Complete updating your filters then rebuild the project to create a new environment with
 patches for September 1st.
