--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -157,7 +157,8 @@ There may be a new patch available to fix this issue.
 . Detach the ``include`` filter. 
 The filter is included by default.
 
-. Complete updating your filters then rebuild the project to create a new environment with
+. Complete updating your filters.
+. Rebuild the project to create a new environment with patches for 1 September.
 patches for September 1st.
 
 
