--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -165,7 +165,7 @@ The filter is included by default.
 [#enhance-project-with-livepatching]
 == Enhance a Project with Livepatching
 
-This section will help you setup filters to aid you in creating proper environments for livepatching.
+This section covers setting up filters to create environments for live patching.
 
 [IMPORTANT]
 ====
