--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -170,7 +170,7 @@ This section covers setting up filters to create environments for live patching.
 [IMPORTANT]
 ====
 
-There are some important things to keep in mind when opting to use the livepatching feature:
+When you are preparing to use live patching, there are some important considerations
 
 * Use only **one** kernel version on your systems. The livepatching packages are installed with a specific kernel.
 
