--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -172,7 +172,8 @@ This section covers setting up filters to create environments for live patching.
 
 When you are preparing to use live patching, there are some important considerations
 
-* Use only **one** kernel version on your systems. The livepatching packages are installed with a specific kernel.
+* Only ever use one kernel version on your systems. 
+The live patching packages are installed with a specific kernel.
 
 * Livepatching updates are shipped together in one patch.
 
