--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -175,7 +175,7 @@ When you are preparing to use live patching, there are some important considerat
 * Only ever use one kernel version on your systems. 
 The live patching packages are installed with a specific kernel.
 
-* Livepatching updates are shipped together in one patch.
+* Live patching updates are shipped as one patch.
 
 * Each kernel patch that begins a new series of live patching kernels will display the **required reboot**
 flag. These kernel patches come with livepatching tools. After installation you must reboot the system once before the following year.
