--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -177,7 +177,7 @@ The live patching packages are installed with a specific kernel.
 
 * Live patching updates are shipped as one patch.
 
-* Each kernel patch that begins a new series of live patching kernels will display the **required reboot**
+* Each kernel patch that begins a new series of live patching kernels will display the ``required reboot`` flag.
 flag. These kernel patches come with livepatching tools. After installation you must reboot the system once before the following year.
 
 * Install livepatches that **only match** the installed kernel version.
