--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -178,7 +178,8 @@ The live patching packages are installed with a specific kernel.
 * Live patching updates are shipped as one patch.
 
 * Each kernel patch that begins a new series of live patching kernels will display the ``required reboot`` flag.
-flag. These kernel patches come with livepatching tools. After installation you must reboot the system once before the following year.
+These kernel patches come with live patching tools. 
+When you have installed them, you will need to reboot the system at least once before the next year.
 
 * Install livepatches that **only match** the installed kernel version.
 
