--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -181,7 +181,7 @@ The live patching packages are installed with a specific kernel.
 These kernel patches come with live patching tools. 
 When you have installed them, you will need to reboot the system at least once before the next year.
 
-* Install livepatches that **only match** the installed kernel version.
+* Only install live patch updates that match the installed kernel version.
 
 * Live patches comes as standalone patches. You must **exclude all** normal kernel patches
 which contain a higher kernel version than the one you have installed on your systems.
