--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -183,7 +183,7 @@ When you have installed them, you will need to reboot the system at least once b
 
 * Only install live patch updates that match the installed kernel version.
 
-* Live patches comes as standalone patches. You must **exclude all** normal kernel patches
+* Live patches are provided as stand-alone patches. 
 which contain a higher kernel version than the one you have installed on your systems.
 ====
 
