--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -184,7 +184,7 @@ When you have installed them, you will need to reboot the system at least once b
 * Only install live patch updates that match the installed kernel version.
 
 * Live patches are provided as stand-alone patches. 
-which contain a higher kernel version than the one you have installed on your systems.
+You must exclude all regular kernel patches with higher kernel version than the currently installed one.
 ====
 
 
