--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -192,7 +192,8 @@ You must exclude all regular kernel patches with higher kernel version than the 
 [#exclude-higher-kernel-version]
 === Exclude Packages with a Higher Kernel Version
 
-In this example you will update your systems with patch *SUSE-15-2019-1244* which contains *kernel-default-4.12.14-150.17.1-x86_64*.
+In this example you update your systems with the ``SUSE-15-2019-1244`` patch.
+This patch contains ``kernel-default-4.12.14-150.17.1-x86_64``.
 
 You need to exclude all patches which contain a higher version of kernel-default.
 
