--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -197,7 +197,7 @@ This patch contains ``kernel-default-4.12.14-150.17.1-x86_64``.
 
 You need to exclude all patches which contain a higher version of ``kernel-default``.
 
-Procedure: Exclude Packages with a Higher Kernel Version
+Procedure: Excluding Packages with a Higher Kernel Version
 
 . Go to menu:Main Menu[Content Lifecycle > Filters] and click on btn:[Create Filter].
 
