--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -199,7 +199,7 @@ You need to exclude all patches which contain a higher version of ``kernel-defau
 
 Procedure: Excluding Packages with a Higher Kernel Version
 
-. Go to menu:Main Menu[Content Lifecycle > Filters] and click on btn:[Create Filter].
+. In the {productname} {webui}, navigate to menu:Content Lifecycle[Filters], and click btn:[Create Filter].
 
 . Enter a Filter Name such as **Exclude kernel greater than 4.12.14-150.17.1**
 
