--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -201,7 +201,8 @@ Procedure: Excluding Packages with a Higher Kernel Version
 
 . In the {productname} {webui}, navigate to menu:Content Lifecycle[Filters], and click btn:[Create Filter].
 
-. Enter a Filter Name such as **Exclude kernel greater than 4.12.14-150.17.1**
+. In the [guimenu]``Filter Name`` field, type a name for your filter.
+For example, [systemitem]``Exclude kernel greater than 4.12.14-150.17.1``
 
 . Select **Patch contains package with version greater than** from the Filter Type dropdown.
 
