--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -204,7 +204,7 @@ Procedure: Excluding Packages with a Higher Kernel Version
 . In the [guimenu]``Filter Name`` field, type a name for your filter.
 For example, [systemitem]``Exclude kernel greater than 4.12.14-150.17.1``
 
-. Select **Patch contains package with version greater than** from the Filter Type dropdown.
+. In the [guimenu]``Filter Type`` field, select [guimenu]``Patch contains package with version greater than``.
 
 . Enter the following values in the available fields:
 
