--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -207,7 +207,7 @@ For example, [systemitem]``Exclude kernel greater than 4.12.14-150.17.1``
 . In the [guimenu]``Filter Type`` field, select [guimenu]``Patch contains package with version greater than``.
 
 
-* Package Name: `kernel-default`
+. In the [guimenu]``Package Name`` field, type [systemitem]``kernel-default``.
 * Epoch: `<empty>`
 * Version: `4.12.14`
 * Release: `150.17.1`
