--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -208,7 +208,7 @@ For example, [systemitem]``Exclude kernel greater than 4.12.14-150.17.1``
 
 
 . In the [guimenu]``Package Name`` field, type [systemitem]``kernel-default``.
-* Epoch: `<empty>`
+. Leave the the [guimenu]``Epoch`` field empty.
 * Version: `4.12.14`
 * Release: `150.17.1`
 
