--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -210,7 +210,7 @@ For example, [systemitem]``Exclude kernel greater than 4.12.14-150.17.1``
 . In the [guimenu]``Package Name`` field, type [systemitem]``kernel-default``.
 . Leave the the [guimenu]``Epoch`` field empty.
 . In the [guimenu]``Version`` field, type [systemitem]``4.12.14``.
-* Release: `150.17.1`
+. In the [guimenu]``Release`` field, type [systemitem]``150.17.1``.
 
 . Click on btn:[Save] to store the Filter.
 
