--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -212,7 +212,7 @@ For example, [systemitem]``Exclude kernel greater than 4.12.14-150.17.1``
 . In the [guimenu]``Version`` field, type [systemitem]``4.12.14``.
 . In the [guimenu]``Release`` field, type [systemitem]``150.17.1``.
 
-. Click on btn:[Save] to store the Filter.
+. Click btn:[Save] to store the filter.
 
 . Go to menu:Main Menu[Content Lifecycle > Projects] and select your Project from the list.
 
