--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -214,7 +214,7 @@ For example, [systemitem]``Exclude kernel greater than 4.12.14-150.17.1``
 
 . Click btn:[Save] to store the filter.
 
-. Go to menu:Main Menu[Content Lifecycle > Projects] and select your Project from the list.
+. Navigate to menu:Content Lifecycle[Projects] and select your project.
 
 . Click on btn:[Attach/Detach Filters] link.
 
