--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -216,7 +216,7 @@ For example, [systemitem]``Exclude kernel greater than 4.12.14-150.17.1``
 
 . Navigate to menu:Content Lifecycle[Projects] and select your project.
 
-. Click on btn:[Attach/Detach Filters] link.
+. Click btn:[Attach/Detach Filters].
 
 . Select **Exclude kernel greater than 4.12.14-150.17.1: ...** from the list and click on btn:[Save].
 
