--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -218,7 +218,7 @@ For example, [systemitem]``Exclude kernel greater than 4.12.14-150.17.1``
 
 . Click btn:[Attach/Detach Filters].
 
-. Select **Exclude kernel greater than 4.12.14-150.17.1: ...** from the list and click on btn:[Save].
+. Select [guimenu]``Exclude kernel greater than 4.12.14-150.17.1``, and click btn:[Save].
 
 
 Once you click the btn:[Build] button a new environment will be created that contains all kernel patches up to the version you have installed.
