--- a/modules/administration/pages/content-lifecycle-examples.adoc
+++ b/modules/administration/pages/content-lifecycle-examples.adoc
@@ -221,7 +221,8 @@ For example, [systemitem]``Exclude kernel greater than 4.12.14-150.17.1``
 . Select [guimenu]``Exclude kernel greater than 4.12.14-150.17.1``, and click btn:[Save].
 
 
-Once you click the btn:[Build] button a new environment will be created that contains all kernel patches up to the version you have installed.
+When you click btn:[Build], a new environment is created.
+The new environment contains all the kernel patches up to the version you installed.
 
 NOTE: All kernel patches with higher kernel versions are removed. Live patching kernels
 will stay available as long as they are not the first in a series.
