--- a/adoc/bp_postgresql_database_migration.adoc
+++ b/adoc/bp_postgresql_database_migration.adoc
@@ -4,33 +4,34 @@
 include::entities.adoc[]
 
 
-{productname} 3 uses postgresql database version 9.4.
-Postgresql version 9.6 has been officially released for {sls} 12 SP3.
-In the near future postgresql 9.6 will become the base version provided by {productname}.
-Currently version 9.4 is hardcoded into SUSE Manager, therefore when installing {productname} it will explicitly use this version.
-This chapter provides guidance on migrating an existing 9.4 database to 9.6 on your {productname} Server.
+{productname} 3 uses PostgreSQL database version 9.4.
+PostgreSQL version 9.6 has been officially released for {sls} 12 SP3, and version 10 for {sls} 12 SP4 and later.
+Now PostgreSQL 10 is the base version provided by {productname} 3.2.
+This chapter provides guidance on migrating an existing 9.4 database to 9.6 and 9.6 to 10 on your {productname} Server.
 
 
 [[bp.postgresql.database.migration.new.installations]]
 == New {productname} Installations
 
 
-Once support for postgresql version 9.6 has been officially released for SUSE Manager, no action will be required for new installations.
-The {productname} extension will pick up the latest version during installation on SLES 12 SP3.
+Support for PostgreSQL version 10 has been officially released for SUSE Manager, no action will be required for new installations.
+The {productname} extension will pick up the latest version during installation on SLES 12 SP4.
 This will be fully transparent to the user.
-Check the active postgresql version with the following command:
+Check the active PostgreSQL version with the following command:
 
 ----
 suse-manager-example-srv:~ # psql --version
-psql (PostgreSQL) 9.6.3
+psql (PostgreSQL) 10.9
 ----
 
 [[bp.postgresql.database.migrating.existing.installations]]
 == Migrating an Existing Installation
 
+=== PostgreSQL 9.4 to 9.6
 
-Before migrating to the new database version, ensure SUSE Manager is fully patched to the latest version.
-You can check if the system is ready to use postgresql 9.6 by issuing the following command:
+
+Before migrating to the database version 9.6, ensure SUSE Manager is fully patched to the latest version.
+You can check if the system is ready to use PostgreSQL 9.6 by issuing the following command:
 
 ----
 suma-test-srv:~ # rpm -q smdba
@@ -39,7 +40,7 @@ smdba-1.5.8-0.2.3.1.x86_64
 
 [IMPORTANT]
 ====
-Postgresql 9.6 requires smdba version 1.5.8 or higher
+PostgreSQL 9.6 requires smdba version 1.5.8 or higher
 ====
 
 [WARNING]
@@ -47,8 +48,6 @@ Postgresql 9.6 requires smdba version 1.5.8 or higher
 Always create a database backup before performing a migration
 ====
 
-
-$$.$$
 The database migration begins by executing the following command:
 
 ----
@@ -56,25 +55,31 @@ $> /usr/lib/susemanager/bin/pg-migrate.sh
 ----
 
 
-The [path]``pg-migrate.sh``
- script will automatically perform the following operations:
+The [path]``pg-migrate.sh`` script will automatically perform the following operations:
 
 * Stop spacewalk services
 * Shut down the running database
-* Check if postgresql 9.6 is installed and install it if not already present
-* Switch from postgresql 9.4 to postgresql 9.6 as the new default
+* Check if PostgreSQL 9.6 is installed and install it if not already present
+* Switch from PostgreSQL 9.4 to PostgreSQL 9.6 as the new default
 * Initiates the database migration
-* Creates a postgresql configuration file tuned for use by SUSE Manager (The reason for the latest version of smdba)
+* Creates a PostgreSQL configuration file tuned for use by SUSE Manager (The reason for the latest version of smdba)
 * Start both the database and spacewalk services
 
 
 [NOTE]
 ====
-Please note that during the migration the data directory of the database is copied for use by the postgresql 9.6.
+During the migration the data directory of the database is copied for use by the PostgreSQL 9.6.
 This results in temporarily doubling the amount of required disk space.
 In case of a failure, the migration script will attempt a restore to the original state.
 After a successful migration, you may safely delete the old database directory (renamed to /var/lib/pgsql/data-pg94) to reclaim lost disk space.
 ====
+
+
+
+=== PostgreSQL 9.6 to 10
+
+
+
 
 == Performing a Fast Migration
 
