--- a/adoc/bp_postgresql_database_migration.adoc
+++ b/adoc/bp_postgresql_database_migration.adoc
@@ -76,12 +76,7 @@ After a successful migration, you may safely delete the old database directory (
 
 
 
-=== PostgreSQL 9.6 to 10
-
-
-
-
-== Performing a Fast Migration
+=== Performing a Fast Migration
 
 
 There are two negative aspects to performing a regular migration:
@@ -106,6 +101,100 @@ Perform a fast migration with the following command (Ensure you have a database 
 ----
 $> /usr/lib/susemanager/bin/pg-migrate.sh fast
 ----
+
+
+
+=== PostgreSQL 9.6 to 10
+
+==== Prepare to Upgrade
+
+Before you begin the upgrade, prepare your existing 3.2 system and create a database backup.
+
+PostgreSQL stores data at [path]``/var/lib/pgsql/data/``, and logs to [path]``/var/lib/pgsql/data/pg_xlog/``.
+
+.Procedure: Preparing to Upgrade
+
+. Check the active PostgreSQL version:
++
+----
+psql --version
+----
++
+If you are using PostgreSQL{nbsp}9.6, you can upgrade to PostgreSQL{nbsp}10.
+
+. Check the active smdba version:
++
+----
+rpm -q smdba
+----
++
+PostgreSQL{nbsp}10 requires ``smdba`` version 1.6.2 or later.
+
+. Perform a database backup.
+// For more information on backing up, see xref:administration:backup-restore.adoc[].
+
+
+
+==== Upgrade PostgreSQL
+
+[WARNING]
+====
+Always create a database backup before performing a migration.
+For more information about a database backup, see xref:db-migration.adoc#db-migration-prepare[].
+====
+
+PostgreSQL upgrades can be performed in two ways: a regular upgrade, or a fast upgrade:
+
+A regular upgrade will create a complete copy of the database, so you will need double the existing database size of space available.
+Regular upgrades can take a considerable amount of time, depending on the size of the database and the speed of the storage system.
+Regular upgrades also require database downtime, your database will not be accessible while the upgrade is running.
+
+A fast upgrade only takes a few minutes, and uses no additional disk space.
+However, if a fast upgrade fails, you must restore the database from the backup.
+With the fast upgrade the risk to run out of disk space is smaller.
+
+In case of failure you do not have the implicit backup that you get when doing a regular upgrade.
+The regular upgrade will copy the database files instead of hardlinking them.
+
+.Procedure: Performing a Regular Upgrade
+. Perform a database backup.
+// For more information on backing up, see xref:administration:backup-restore.adoc[].
+. Begin the upgrade:
++
+----
+/usr/lib/susemanager/bin/pg-migrate-96-to-10.sh
+----
+. When the upgrade has successfully completed, you can safely delete the old database directory and reclaim lost disk space.
+The old directory is renamed to [path]``/var/lib/pgsql/data-pg96``.
+
+The [path]``pg-migrate-96-to-10.sh`` script performs these operations:
+
+* Stop spacewalk services
+* Shut down the running database
+* Check if PostgreSQL{nbsp}10 is installed and install it if necessary
+* Switch from PostgreSQL{nbsp}9.6 to PostgreSQL{nbsp}10 as the new default
+* Initiate the database migration
+* Create a PostgreSQL configuration file tuned for use by {productname}
+* Start the database and spacewalk services
+
+[NOTE]
+====
+If the upgrade fails, the migration script will attempt to restore the database to its original state.
+====
+
+.Procedure: Performing a Fast PostgreSQL Upgrade
+. Perform a database backup.
+Without a verified database backup, you must not initiate a fast upgrade.
+// For more information on backing up, see xref:administration:backup-restore.adoc[].
+. Begin the upgrade:
++
+----
+/usr/lib/susemanager/bin/pg-migrate-96-to-10.sh fast
+----
+. When the upgrade has successfully completed, you can safely delete the old database directory and reclaim lost disk space.
+The old directory is renamed to [path]``/var/lib/pgsql/data-pg96``.
+
+
 
 == Typical Migration Sample Session
 
