--- a/adoc/bp_postgresql_database_migration.adoc
+++ b/adoc/bp_postgresql_database_migration.adoc
@@ -24,6 +24,9 @@ suse-manager-example-srv:~ # psql --version
 psql (PostgreSQL) 10.9
 ----
 
+
+
+
 [[bp.postgresql.database.migrating.existing.installations]]
 == Migrating an Existing Installation
 
@@ -76,7 +79,7 @@ After a successful migration, you may safely delete the old database directory (
 
 
 
-=== Performing a Fast Migration
+==== Performing a Fast Migration
 
 
 There are two negative aspects to performing a regular migration:
@@ -96,7 +99,7 @@ Only perform a fast migration if you have an availabel database backup.
 ====
 
 
-Perform a fast migration with the following command (Ensure you have a database backup):
+Perform a fast migration with the following command (ensure you have a database backup):
 
 ----
 $> /usr/lib/susemanager/bin/pg-migrate.sh fast
