--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -33,7 +33,7 @@ ifndef::backend-pdf[]
 ** xref:content-lifecycle.adoc[Content Lifecycle Management]
 ** Tuning
 *** xref:tuning-changelogs.adoc[Tuning Changelogs]
-*** xref:tuning-ipdiscovery.adoc[Tuning IP Discovery]
+*** xref:tuning-clientdiscovery.adoc[Tuning IP Discovery]
 ** Maintenance Window
 *** xref:maintenance-window.adoc[Maintenance Window]
 // Troubleshooting
@@ -113,7 +113,7 @@ include::modules/administration/pages/content-lifecycle.adoc[leveloffset=+1]
 // Tuning
 include::modules/administration/pages/tuning-changelogs.adoc[leveloffset=+1]
 
-include::modules/administration/pages/tuning-ipdiscovery.adoc[leveloffset=+1]
+include::modules/administration/pages/tuning-clientdiscovery.adoc[leveloffset=+1]
 
 // Maintenance Window
 include::modules/administration/pages/maintenance-window.adoc[leveloffset=+2]
