--- a/modules/administration/pages/tuning-clientdiscovery.adoc
+++ b/modules/administration/pages/tuning-clientdiscovery.adoc
@@ -1,5 +1,8 @@
 [[tuning-changelogs]]
-= Tuning IP Discovery
+= Tuning Client Discovery
+
+By default, {productname} expects you to register individual clients, either manually or through automation.
+However, it is possible to use Salt features to allow {productname} to discover Salt clients that connect using an IP address from within a specified range.
 
 We don't have exactly this, and most customers we've been working with
 prefer explicit on-boarding to discovery.
