--- a/adoc/bp_postgresql_database_migration.adoc
+++ b/adoc/bp_postgresql_database_migration.adoc
@@ -5,7 +5,8 @@ include::entities.adoc[]
 
 
 {productname} 3 uses PostgreSQL database version 9.4.
-PostgreSQL version 9.6 has been officially released for {sls} 12 SP3, and version 10 for {sls} 12 SP4 and later.
+PostgreSQL version 9.6 has been released for {sls} 12 SP3.
+PostgreSQL version 10 has been released for {sls} 12 SP4 and later.
 Now PostgreSQL 10 is the base version provided by {productname} 3.2.
 This chapter provides guidance on migrating an existing 9.4 database to 9.6 and 9.6 to 10 on your {productname} Server.
 
