--- a/adoc/bp_postgresql_database_migration.adoc
+++ b/adoc/bp_postgresql_database_migration.adoc
@@ -4,7 +4,9 @@
 include::entities.adoc[]
 
 
-{productname} 3 uses PostgreSQL database version 9.4.
+{productname} 3 uses PostgreSQL version 9.4.
+{productname} 3.2 uses PostgreSQL version 10.
+
 PostgreSQL version 9.6 has been released for {sls} 12 SP3.
 PostgreSQL version 10 has been released for {sls} 12 SP4 and later.
 Now PostgreSQL 10 is the base version provided by {productname} 3.2.
