--- a/adoc/bp_postgresql_database_migration.adoc
+++ b/adoc/bp_postgresql_database_migration.adoc
@@ -10,7 +10,7 @@ include::entities.adoc[]
 PostgreSQL version 9.6 has been released for {sls} 12 SP3.
 PostgreSQL version 10 has been released for {sls} 12 SP4 and later.
 Now PostgreSQL 10 is the base version provided by {productname} 3.2.
-This chapter provides guidance on migrating an existing 9.4 database to 9.6 and 9.6 to 10 on your {productname} Server.
+This chapter provides guidance on migrating your {productname} Server from PostgreSQL 9.4 to 9.6, or migrating from 9.6 to 10.
 
 
 [[bp.postgresql.database.migration.new.installations]]
