--- a/adoc/bp_postgresql_database_migration.adoc
+++ b/adoc/bp_postgresql_database_migration.adoc
@@ -17,7 +17,8 @@ This chapter provides guidance on migrating your {productname} Server from Postg
 == New {productname} Installations
 
 
-Support for PostgreSQL version 10 has been officially released for SUSE Manager, no action will be required for new installations.
+PostgreSQL version 10 is now supported on {productname}.
+New {productname} installations will have PostgreSQL version 10 installed by default.
 The {productname} extension will pick up the latest version during installation on SLES 12 SP4.
 This will be fully transparent to the user.
 Check the active PostgreSQL version with the following command:
