--- a/adoc/bp_postgresql_database_migration.adoc
+++ b/adoc/bp_postgresql_database_migration.adoc
@@ -19,7 +19,7 @@ This chapter provides guidance on migrating your {productname} Server from Postg
 
 PostgreSQL version 10 is now supported on {productname}.
 New {productname} installations will have PostgreSQL version 10 installed by default.
-The {productname} extension will pick up the latest version during installation on SLES 12 SP4.
+When you install {productname} on {sle}{nbsp}12 SP4, the latest version of PostgreSQL will be installed by default.
 This will be fully transparent to the user.
 Check the active PostgreSQL version with the following command:
 
