--- a/adoc/bp_postgresql_database_migration.adoc
+++ b/adoc/bp_postgresql_database_migration.adoc
@@ -20,7 +20,7 @@ PostgreSQL version 10 is now supported on {productname}.
 New {productname} installations will have PostgreSQL version 10 installed by default.
 When you install {productname} on {sle}{nbsp}12 SP4, the latest version of PostgreSQL will be installed by default.
 This will be fully transparent to the user.
-Check the active PostgreSQL version with the following command:
+Check the active PostgreSQL version with this command:
 
 ----
 suse-manager-example-srv:~ # psql --version
