--- a/adoc/bp_postgresql_database_migration.adoc
+++ b/adoc/bp_postgresql_database_migration.adoc
@@ -33,7 +33,7 @@ psql (PostgreSQL) 10.9
 [[bp.postgresql.database.migrating.existing.installations]]
 == Migrating an Existing Installation
 
-=== PostgreSQL 9.4 to 9.6
+=== Upgrade from PostgreSQL 9.4 to 9.6
 
 
 Before migrating to the database version 9.6, ensure SUSE Manager is fully patched to the latest version.
