--- a/adoc/bp_postgresql_database_migration.adoc
+++ b/adoc/bp_postgresql_database_migration.adoc
@@ -36,7 +36,7 @@ psql (PostgreSQL) 10.9
 === Upgrade from PostgreSQL 9.4 to 9.6
 
 
-Before migrating to the database version 9.6, ensure SUSE Manager is fully patched to the latest version.
+Before you migrate to PostgreSQL 9.6, ensure SUSE Manager is the latest version, and fully updated.
 You can check if the system is ready to use PostgreSQL 9.6 by issuing the following command:
 
 ----
