--- a/adoc/bp_postgresql_database_migration.adoc
+++ b/adoc/bp_postgresql_database_migration.adoc
@@ -37,7 +37,7 @@ psql (PostgreSQL) 10.9
 
 
 Before you migrate to PostgreSQL 9.6, ensure SUSE Manager is the latest version, and fully updated.
-You can check if the system is ready to use PostgreSQL 9.6 by issuing the following command:
+You can check if the system is ready to use PostgreSQL 9.6 with this command:
 
 ----
 suma-test-srv:~ # rpm -q smdba
