--- a/adoc/bp_postgresql_database_migration.adoc
+++ b/adoc/bp_postgresql_database_migration.adoc
@@ -102,7 +102,8 @@ Only perform a fast migration if you have an availabel database backup.
 ====
 
 
-Perform a fast migration with the following command (ensure you have a database backup):
+Before you begin, ensure you have a database backup.
+Perform a fast migration with this command:
 
 ----
 $> /usr/lib/susemanager/bin/pg-migrate.sh fast
